add production database

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,3 +1,7 @@
 <h1>Welcome to Derek's Hair Salon!</h1>
-<a href='/stylist/new'>Add a new stylist<a/>
-<a href='/stylist'>View our list of stylists</a>
+<p><a href='/stylist/add'>Add a new stylist<a/></p>
+<p><a href='/stylist'>View our list of stylists</a></p>
+<br>
+<br>
+<p><a href='/client/add'>Add a new client<a/></p>
+<p><a href='/client'>View our list of clients</a></p>
