--- a/HairSalon/Views/Stylist/AddStylist.cshtml
+++ b/HairSalon/Views/Stylist/AddStylist.cshtml
@@ -6,3 +6,5 @@
   <input id="new-details" name="new-details" type="text">
   <button type="submit">Submit</button>
 </form>
+<p><a href='/stylist'>View our list of stylists</a></p>
+<p><a href="/">Return to main page</a></p>
