add some testing and ability to list clients by stilist

--- a/HairSalon/Views/Client/Clients.cshtml
+++ b/HairSalon/Views/Client/Clients.cshtml
@@ -2,7 +2,7 @@
 @foreach (var Client in Model)
 {
 <li><p>Name: @Client.GetName()</p></li>
-<li><p>Details: @Client.GetId()</p></li>
+<li><p>Client ID: @Client.GetId()</p></li>
 <br>
 }
 </ul>
