add functionality for edit to both stylists and clients

--- a/HairSalon/Views/Stylist/Stylists.cshtml
+++ b/HairSalon/Views/Stylist/Stylists.cshtml
@@ -2,6 +2,7 @@
 @foreach (var Stylist in Model)
   {
   <li><p>Name: <a href="/stylist/@Stylist.GetId()/"> @Stylist.GetName()</a></p></li>
+  <li><a href="/stylist/@Stylist.GetId()/editstylist">Edit</a></li>
   <li><p>Details: @Stylist.GetDetail()</p></li>
   <br>
   }
