--- a/HairSalon/Views/Client/Clients.cshtml
+++ b/HairSalon/Views/Client/Clients.cshtml
@@ -2,6 +2,7 @@
 @foreach (var Client in Model)
 {
 <li><p>Name: @Client.GetName()</p></li>
+<li><a href="/client/@Client.GetId()/editclient">Edit</a></li>
 <li><p>Client ID: @Client.GetId()</p></li>
 <br>
 }
