add framework for specialities

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -5,3 +5,7 @@
 <br>
 <p><a href='/client/add'>Add a new client<a/></p>
 <p><a href='/client'>View our list of clients</a></p>
+<br>
+<br>
+<p><a href='/speciality/add'>Add a new speciality<a/></p>
+<p><a href='/speciality'>View our list of specialities</a></p>
